# QtDatabase

./: .clangd  CMakeLists.txt  config.json
include/: common.h
src/app/: CMakeLists.txt  dataTableMangerpage.cpp  dataTableMangerpage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  memeryfreetestwidget.h
src/customDataTableManager/: CMakeLists.txt  customDatetimeDelegate.cpp  customDatetimeDelegate.h  customSqlTableModel.cpp  customSqlTableModel.h  dataTableManagerWithTableConfig.cpp  dataTableManagerWithTableConfig.h  dataTableManger.cpp  dataTableManger.h
src/customNavigationWidget/: CMakeLists.txt  navigationdelegate.cpp  navigationdelegate.h  navigationmodel.cpp  navigationmodel.h
src/customNetworkdownloader/: CMakeLists.txt  customNetworkDownloader.h  customNetworkdownloader.cpp
src/dataTableFilterWidget/: CMakeLists.txt  advancedquerywidget.cpp  advancedquerywidget.h
src/dataViewDialog/: CMakeLists.txt  dataViewDialog.cpp  dataViewDialog.h
src/tableConfigWidget/: CMakeLists.txt  dashboardPage.cpp  dashboardPage.h  tableconfigwidget.cpp  tableconfigwidget.h
test/: datest.txt
